Enable automated PRs for rpm updates
We need to enable `dev package managers` for rpm lock files to be
updated automatically as that's currently not stable supported.

Ref: https://konflux-ci.dev/docs/building/prefetching-dependencies/#rpm

Signed-off-by: Lokesh Mandvekar <lsm5@fedoraproject.org>

--- a/.tekton/rawhide-pull-request.yaml
+++ b/.tekton/rawhide-pull-request.yaml
@@ -189,6 +189,8 @@ spec:
       params:
       - name: input
         value: $(params.prefetch-input)
+      - name: dev-package-managers
+        value: "true"
       runAfter:
       - clone-repository
       taskRef:
