--- a/.tekton/rawhide-push.yaml
+++ b/.tekton/rawhide-push.yaml
@@ -186,6 +186,8 @@ spec:
       params:
       - name: input
         value: $(params.prefetch-input)
+      - name: dev-package-managers
+        value: "true"
       runAfter:
       - clone-repository
       taskRef:
