Packit: switch to f42
Make it consistent with rest of the config

TODO: Would be nice to change things only in one place / config file
instead of in multiple places.

Signed-off-by: Lokesh Mandvekar <lsm5@fedoraproject.org>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -11,8 +11,8 @@ jobs:
       failure_comment:
         message: "Tests failed."
     targets:
-      - fedora-rawhide-x86_64
-      - fedora-rawhide-aarch64
+      - fedora-42-x86_64
+      - fedora-42-aarch64
     tf_extra_params:
       environments:
         - os:
